force-app/main/default/objects/Cross_Colo__c/Cross_Colo__c.object-meta.xml
<CustomObject>
    <label>Cross Colo</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Colos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>