force-app/main/default/objects/Cross_Colo__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <label>Carrier Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verizon Wireless</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>