force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_Available_RAD__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_Available_RAD__c</fullName>
    <label>Cross Colo Available RAD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>