force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_Comments__c</fullName>
    <label>Cross Colo Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>