force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_Current_Ground_Elevation__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_Current_Ground_Elevation__c</fullName>
    <label>Cross Colo Current Ground Elevation</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>