force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_Current_Tower_Height__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_Current_Tower_Height__c</fullName>
    <label>Cross Colo Current Tower Height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>