force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_Interest__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_Interest__c</fullName>
    <label>Cross Colo Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>