force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_LAT__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_LAT__c</fullName>
    <label>Cross Colo LAT</label>
    <length>32</length>
    <type>Text</type>
</CustomField>