force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_LOG__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_LOG__c</fullName>
    <label>Cross Colo LOG</label>
    <length>32</length>
    <type>Text</type>
</CustomField>