force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_RF_Candidate_Approved__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_RF_Candidate_Approved__c</fullName>
    <label>Cross Colo RF Candidate Approved</label>
    <type>Date</type>
</CustomField>