force-app/main/default/objects/Cross_Colo__c/fields/Cross_Colo_SCIP_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Cross_Colo_SCIP_Submitted__c</fullName>
    <label>Cross Colo SCIP Submitted</label>
    <type>Date</type>
</CustomField>