force-app/main/default/objects/Cross_Colo__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>strk__Project__c</referenceTo>
    <relationshipLabel>Cross Colos</relationshipLabel>
    <relationshipName>Cross_Colos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>